--- a/konyv.tex
+++ b/konyv.tex
@@ -16,7 +16,9 @@
 \usepackage{fancyvrb}
 \usepackage[symbol]{footmisc}
 \usepackage[all]{genealogytree}
+\usepackage{graphicx}
 \usepackage{imakeidx}
+\usepackage{menukeys}
 \usepackage{pdfpages}
 \usepackage{storebox}
 \usepackage{tcolorbox}
